--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "dev": "cross-env NODE_ENV=developer webpack --mode developer"
+
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexafato1/webpack-tutor.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alexafato1/webpack-tutor/issues"
+  },
+  "homepage": "https://github.com/alexafato1/webpack-tutor#readme",
   "devDependencies": {
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
