--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "dev": "cross-env NODE_ENV=developer webpack --mode developer"
-
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "start": "cross=ens NODE_ENV=development webpack  serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,18 @@
   },
   "homepage": "https://github.com/alexafato1/webpack-tutor#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.1.3",
+    "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^11.0.1",
+    "webpack-dev-server": "^3.11.2"
   }
 }
